fix overflow-y

--- a/css/style.scss
+++ b/css/style.scss
@@ -48,7 +48,7 @@ section {
     gap: 4rem;
     align-items: center;
     width: 100%;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 //fim do container
 
